converted to node server

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "properties-reader": "^2.2.0"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "name": "web-application-",
   "version": "1.0.0",
